Widget body no longer clickable. On clicking 'more' button, IexPageComponent has the company in the active widget tab as selected company. Some style corrections in 'more' button since it had to be replaced. Min height for mat-tab-group to prevent jumping when switching tabs.

--- a/src/app/pages/overview-page/widgets/iex-widget/iex-widget.component.scss
+++ b/src/app/pages/overview-page/widgets/iex-widget/iex-widget.component.scss
@@ -1,11 +1,14 @@
 mat-card {
-  padding-bottom: 8px;
+  padding-bottom: 4px;
 }
 mat-card-title {
   display: flex;
   justify-content: space-between;
   padding: 4px 8px;
   align-items: center;
+}
+mat-tab-group {
+  min-height: 410px;
 }
 .mat-h2 {
   margin-bottom: 0;
@@ -51,4 +54,6 @@ mat-card-title {
 
 .button-container {
   text-align: right;
+  margin-bottom: 4px;
+  margin-right: 3px;
 }
